# Sagesai

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml
apps/platform-api/: .dockerignore  Dockerfile  pyproject.toml
apps/platform-api/alembic/: env.py
apps/platform-api/alembic/versions/: 4bbeb416295e_create_users_table.py  82a2456070ec_create_approval_requests_table.py  c0b3342dee96_add_conversation_memory_tables.py  c12792ec4a63_add_human_approval_workflow.py
apps/platform-api/app/: main.py
apps/platform-api/app/api/dependencies/: auth.py
apps/platform-api/app/api/v1/: router.py
apps/platform-api/app/core/: security.py
apps/platform-api/app/core/config/: settings.py
apps/platform-api/app/core/exceptions/: __init__.py  handlers.py
apps/platform-api/app/core/security/: __init__.py  auth.py  middleware.py  rate_limit.py
apps/platform-api/app/database/: session.py
apps/platform-api/app/ml/anomaly/: inference.py  train.py
apps/platform-api/app/ml/document_vision/: inference.py  train.py
apps/platform-api/app/models/: __init__.py  approval.py  memory.py  user.py
apps/platform-api/app/observability/: __init__.py  logging.py  metrics.py  middleware.py  request_context.py  request_logging.py
apps/platform-api/app/schemas/: ai.py  approval.py  company_secretary.py  engineering.py  evaluation.py  guardrails.py  information.py  memory.py  nlp.py  soc.py  user.py
apps/platform-api/app/services/ai/: base.py  gateway.py  gemini.py
apps/platform-api/app/services/anomaly/: __init__.py  client.py
apps/platform-api/app/services/approval/: __init__.py  service.py
apps/platform-api/app/services/company_secretary/: service.py
apps/platform-api/app/services/engineering/: orchestrator.py  (+1 more)
apps/platform-api/data/chroma/: chroma.sqlite3
apps/platform-api/tests/: conftest.py  test_ai_gateway.py  test_anomaly.py  test_approval.py  test_auth.py  test_engineering.py  test_exceptions.py  test_guardrails.py  test_health.py  test_memory.py  test_rag.py  test_security.py  test_vision.py
services/anomaly-service/: .dockerignore  Dockerfile  pyproject.toml
services/anomaly-service/app/: inference.py  main.py
services/anomaly-service/app/artifacts/: autoencoder.pt  scaler.joblib  threshold.npy
(+46 files in other folders)
