[project]
name = "sagesai-platform-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.5",
    "asyncpg>=0.31.0",
    "bcrypt>=5.0.0",
    "chromadb>=1.5.9",
    "email-validator>=2.3.0",
    "fastapi>=0.139.0",
    "google-genai>=2.11.0",
    "httpx>=0.28.1",
    "joblib>=1.5.3",
    "mlflow>=3.14.0",
    "numpy>=2.5.1",
    "pandas>=2.3.3",
    "passlib>=1.7.4",
    "pillow>=12.3.0",
    "prometheus-client>=0.25.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "pypdf>=6.14.2",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.32",
    "scikit-learn>=1.9.0",
    "sentence-transformers>=5.6.0",
    "sqlalchemy>=2.0.51",
    "structlog>=26.1.0",
    "tensorflow>=2.21.0",
    "torch>=2.13.0",
    "transformers>=5.13.1",
    "uvicorn[standard]>=0.51.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.21",
]
